infra/kubernetes/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finpulse-api
  namespace: finpulse
spec:
  replicas: 2
  selector:
    matchLabels: {app: finpulse-api}
  template:
    metadata:
      labels: {app: finpulse-api}
    spec:
      serviceAccountName: finpulse
      containers:
        - name: api
          image: ACCOUNT_ID.dkr.ecr.af-south-1.amazonaws.com/finpulse-api:latest
          ports: [{name: http, containerPort: 8000}]
          readinessProbe:
            httpGet: {path: /health, port: http}
            initialDelaySeconds: 5
          livenessProbe:
            httpGet: {path: /health, port: http}
            initialDelaySeconds: 15
          resources:
            requests: {cpu: 150m, memory: 192Mi}
            limits: {cpu: 1, memory: 768Mi}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: finpulse-api
  namespace: finpulse
spec:
  selector: {app: finpulse-api}
  ports: [{name: http, port: 8000, targetPort: http}]
